# tui-nfl-scores

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/query_scores/: __init__.py  debug_gamescores_api.py  fetch_nfl_scores.py
